--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,12 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 #
+jpa.default=h2PersistenceUnit
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:metasSemanais"
+db.default.jndiName=DefaultDS
+ebean.default="models.*"
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
